Uploaded image for project: 'Geode'
  1. Geode
  2. GEODE-8063

Access violation during Cache destruction caused by ClientMetadataService

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 1.14.0
    • native client
    • None

    Description

      During the destruction of Cache the pointer to CacheImpl is invalid. Calls from ClientMetadataService attempt to access Pool instances through the Cache instance rather than CacheImpl resulting in access violation. This issue is timing dependent and isn't always reproducible. 

      Attachments

        Issue Links

          Activity

            People

              jbarrett Jacob Barrett
              jbarrett Jacob Barrett
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: