GEODE-8063: Fixes access violation.

The external Cache pointer is not valid when destruction has started.
Refactored to not be static and use this CacheImpl.
Removed unused private static method from API files.